<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_project_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/project_name_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_select"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/tv_project_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        tools:text="@string/project_item_created_placeholder"
        app:layout_constraintTop_toBottomOf="@id/tv_project_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_select" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_item_set_current"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/project_item_delete_content_description"
        android:padding="4dp"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>
